fix menu breakage on smaller screens

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -92,6 +92,10 @@ form .btn-enviar input[type=submit]:hover {
     scroll-margin-top: 200px;
 }
 
+.o-que-eu-faco {
+    scroll-margin-top: 120px;
+}
+
 /* ESTILO DO CABEÇALHO */
 
 header {
@@ -123,6 +127,10 @@ header .btn-contato button {
     transition: .8s;
 }
 
+header .btn-contato button:hover {
+    color: white;
+}
+
 header nav.menu-desktop a:hover {
     color: #40A2D8;
     transform: scale(1.2);
@@ -143,7 +151,7 @@ header .menu-desktop {
     align-items: center;
 }
 
-header .menu-desktop .logo a img{
+header .menu-desktop .logo a img {
     display: flex;
     align-items: center;
     width: 40px;
@@ -257,7 +265,7 @@ section.topo-do-site .flex {
 
 .topo-do-site .txt-topo-site p {
     color: #F0EDCF;
-    margin: 40px 0;
+    margin: 40px 0 60px;
     max-width: 80%;
     letter-spacing: 1.2px;
 }
@@ -273,22 +281,18 @@ section.topo-do-site .flex {
 .topo-do-site .btn-contato button a {
     text-decoration: none;
     color: #000;
+    transition: .8s
 }
 
-@keyframes flutuar {
-    0% {
-        top: 0;
-    }
-
-    100% {
-        top: 30px;
-    }
+.topo-do-site .btn-contato button:hover{
+    background-color: #f0f0f0; /* Adiciona uma leve mudança de cor de fundo */
 }
 
 /* Estilos DAS ESPECIALIDADES */
 
 section.especialidades {
     padding: 40px 4%;
+    margin-bottom: 50px;
 }
 
 section.especialidades .flex {
@@ -607,6 +611,28 @@ footer .line-footer p a {
     .sobre {
         scroll-margin-top: 125px;
     }
+}
+
+@media screen and (max-width: 1231px){ 
+    header a {
+        font-size: 17px;
+    }
+
+    header nav.menu-desktop ul li {
+        display: inline-block;
+        padding: 0 20px;
+    }
+
+    header nav.menu-desktop ul{
+        margin-left: 15px;
+    }
+
+    header .btn-contato button {
+        color: white;
+        font-size: 17px;
+        
+    }
+    
 }
 
 @media screen and (max-width: 1020px) {
